force-app/main/default/objects/Shortage__c/Shortage__c.object-meta.xml
<CustomObject>
    <label>Shortage</label>
    <nameField>
        <displayFormat>S-{000000000}</displayFormat>
        <label>Shortage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shortages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>