force-app/main/default/objects/Shortage__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <formula>Supplier__r.Owner.FirstName +&quot; &quot;+ Supplier__r.Owner.LastName</formula>
    <label>Buyer</label>
    <type>Text</type>
</CustomField>