force-app/main/default/objects/Shortage__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>Bus__r.Sales_Order__r.Account__r.Internal_Name__c</formula>
    <label>Customer</label>
    <type>Text</type>
</CustomField>