force-app/main/default/objects/Shortage__c/fields/Estimated_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Receipt__c</fullName>
    <label>Estimated Receipt</label>
    <type>DateTime</type>
</CustomField>