force-app/main/default/objects/Shortage__c/fields/Production_Order__c.field-meta.xml
<CustomField>
    <fullName>Production_Order__c</fullName>
    <formula>Bus__r.Production_Order__r.Name</formula>
    <label>Production Order</label>
    <type>Text</type>
</CustomField>