force-app/main/default/objects/Shortage__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineering - BOM</fullName>
            </value>
            <value>
                <fullName>Engineering - Design</fullName>
            </value>
            <value>
                <fullName>Engineering - Late Release</fullName>
            </value>
            <value>
                <fullName>Sales - Late PCO</fullName>
            </value>
            <value>
                <fullName>Sales - Customer Change</fullName>
            </value>
            <value>
                <fullName>Freight - Damaged</fullName>
            </value>
            <value>
                <fullName>Freight - Delayed/Lost</fullName>
            </value>
            <value>
                <fullName>Purchasing - Lead Time</fullName>
            </value>
            <value>
                <fullName>Purchasing - PO Issue</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Vendor - Bad Info</fullName>
            </value>
            <value>
                <fullName>Vendor - Late</fullName>
            </value>
            <value>
                <fullName>Vendor - Rejected</fullName>
            </value>
            <value>
                <fullName>Manufacturing - Damaged</fullName>
            </value>
            <value>
                <fullName>Manufacturing - Install Issue</fullName>
            </value>
            <value>
                <fullName>Manufacturing - Lost</fullName>
            </value>
            <value>
                <fullName>Warehouse - Damaged</fullName>
            </value>
            <value>
                <fullName>Warehouse - Lost/Late</fullName>
            </value>
            <value>
                <fullName>Incorrect Count / Materials</fullName>
            </value>
            <value>
                <fullName>Onhand Balance</fullName>
            </value>
            <value>
                <fullName>Physical Inventory</fullName>
            </value>
            <value>
                <fullName>In Stock</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>