force-app/main/default/objects/Shortage__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <formula>Bus__r.Slot_Index__c +1</formula>
    <label>Start #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>