force-app/main/default/objects/Shortage__c/fields/Tracking__c.field-meta.xml
<CustomField>
    <fullName>Tracking__c</fullName>
    <label>Tracking #</label>
    <type>TextArea</type>
</CustomField>