force-app/main/default/objects/Shortage__c/fields/Week_Beginning__c.field-meta.xml
<CustomField>
    <fullName>Week_Beginning__c</fullName>
    <formula>Bus__r.Week_Start_Date__c</formula>
    <label>Week Beginning</label>
    <type>Date</type>
</CustomField>